<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroImoveisActivity"
    tools:showIn="@layout/activity_cadastro_imoveis">


    <Button
        android:id="@+id/salvar"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"
        android:text="@string/salvar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape2"
        android:text="@string/cancelar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/salvar"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="368dp"
        android:layout_height="426dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="108dp"
            android:layout_height="427dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/descricao"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="28dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/preco"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="25dp"
                tools:layout_editor_absoluteY="90dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/cidade"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="147dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/quartos"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="195dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/banheiros"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="243dp" />

            <TextView
                android:id="@+id/telefone"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/telefone"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/comodos"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="291dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/tipo"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="338dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/status"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="393dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/corretoras"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="445dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="427dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/descricao_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.909" />

            <EditText
                android:id="@+id/preco_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6"
                app:layout_constraintVertical_bias="1.0" />

            <Spinner
                android:id="@+id/cidades_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:entries="@array/cities_array"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7"
                app:layout_constraintVertical_bias="1.0" />

            <Spinner
                android:id="@+id/quartos_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:entries="@array/numbers"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                app:layout_constraintVertical_bias="1.0" />

            <Spinner
                android:id="@+id/banheiros_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:entries="@array/numbers"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/telefone_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="phone"
                android:singleLine="true" />

            <Spinner
                android:id="@+id/comodos_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:entries="@array/numbers"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/tipo_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toTopOf="@+id/textView11"
                app:layout_constraintVertical_bias="1.0" />

            <Spinner
                android:id="@+id/status_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:entries="@array/status_array"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toTopOf="@+id/textView12"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/corretora_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>