<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    tools:context=".MenuImobi"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/alterar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_imobiapp_logo" />

    <Button
        android:id="@+id/alterar"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/atualizar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/excluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cadastrar"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/listar"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/listar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/excluir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastrar" />

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/cadastrar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/listar"
        app:layout_constraintEnd_toStartOf="@+id/alterar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/excluir"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/deletar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/listar"
        app:layout_constraintTop_toBottomOf="@+id/alterar" />
</android.support.constraint.ConstraintLayout>