<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_cadastro_usuario">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="368dp"
        android:layout_height="164dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="144dp"
            android:layout_height="153dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/login"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/senha"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:padding="8dp"
                android:text="@string/email"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/loginU_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <EditText
                android:id="@+id/pass_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="textPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/emailU_txt"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/cancelar_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape2"
        android:text="@string/cancelar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/save_u"
        app:layout_constraintHorizontal_bias="0.263"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.068" />

    <Button
        android:id="@+id/save_u"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"
        android:text="@string/salvar"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.068" />
</android.support.constraint.ConstraintLayout>